Update website to English and use updated assets

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Queee Calculator - AI-Powered Personalized Calculator</title>
-    <meta name="description" content="AI-powered personalized calculator - Customize your exclusive calculator with natural language, supporting scientific calculations, financial tools, unit conversions and more">
-    <meta name="keywords" content="calculator,AI calculator,scientific calculator,financial calculator,personalized calculator,Queee Calculator">
+    <title>Died Yet? - Safety Check-in for Solo Living</title>
+    <meta name="description" content="Died Yet? is a safety check-in tool for people living alone. Through simple daily check-ins and an emergency notification system, it provides invisible protection for your safety.">
+    <meta name="keywords" content="solo living safety, safety check-in, Died Yet, emergency notification, elderly safety, international students safety">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -13,12 +13,12 @@
     <link rel="icon" type="image/png" href="assets/icon/app_icon.png">
 </head>
 <body>
-    <!-- 导航栏 -->
+    <!-- Navbar -->
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="assets/icon/app_icon.png" alt="Queee Calculator" class="logo-img">
-                <span class="logo-text">Queee Calculator</span>
+                <img src="assets/icon/app_icon.png" alt="Died Yet?" class="logo-img">
+                <span class="logo-text">Died Yet?</span>
             </div>
             <div class="nav-menu">
                 <a href="#features" class="nav-link">Features</a>
@@ -29,59 +29,92 @@
         </div>
     </nav>
 
-    <!-- 主页英雄区域 -->
+    <!-- Hero Section -->
     <section class="hero">
         <div class="hero-container">
-            <h1 class="hero-title">Queee Calculator</h1>
-            <p class="hero-subtitle">AI-Powered Personalized Calculator & Smart Computing Assistant</p>
+            <h1 class="hero-title">Died Yet?</h1>
+            <p class="hero-subtitle">"Still alive? Check in." - Guarding your every day</p>
             <p class="hero-description">
-                Customize your exclusive calculator with natural language, intelligently extending scientific calculations, financial tools, unit conversions and more.
-                Providing reliable computing solutions for professionals and families, making calculations simpler and smarter.
+                An invisible safety net designed for those living alone. Check in once a day to confirm you're safe. If you miss a check-in, the system automatically notifies your emergency contacts.
+                Never let care be absent, keeping safety online at all times.
             </p>
             <div class="hero-buttons">
-                <a href="#download" class="btn btn-primary">Download Now</a>
+                <a href="#download" class="btn btn-primary">Get Started</a>
                 <a href="#features" class="btn btn-secondary">Learn More</a>
             </div>
         </div>
     </section>
 
-    <!-- 核心功能特性 -->
+    <!-- Core Features -->
     <section id="features" class="features">
         <div class="container">
             <h2 class="section-title">Core Features</h2>
-            <p class="section-subtitle">Simple tools with powerful functionality</p>
+            <p class="section-subtitle">Simple design, solid protection</p>
             
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">
                         <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <circle cx="12" cy="12" r="3"/>
-                            <path d="M12 1v6m0 6v6m11-7h-6m-6 0H1"/>
-                            <path d="M20.2 20.2l-4.2-4.2m0 0l-4.2-4.2m4.2 4.2l4.2-4.2m-4.2 4.2l-4.2 4.2"/>
-                            <path d="M3.8 3.8l4.2 4.2m0 0l4.2 4.2m-4.2-4.2L3.8 3.8m4.2 4.2l4.2 4.2"/>
+                            <path d="M22 11.08V12a10 10 0 1 1-5.93-9.14"/>
+                            <polyline points="22 4 12 14.01 9 11.01"/>
                         </svg>
                     </div>
-                    <h3 class="feature-title">AI Function Designer</h3>
+                    <h3 class="feature-title">One-Tap Check-in</h3>
                     <p class="feature-description">
-                        Describe your needs in natural language, and AI will automatically design and extend calculator functions for you.
-                        Supports professional function customization including scientific calculations, financial tools, and unit conversions.
+                        Just one tap a day to let the system and your loved ones know you're safe. Minimal interaction that won't disrupt your daily life.
                     </p>
                 </div>
 
                 <div class="feature-card">
                     <div class="feature-icon">
                         <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <rect x="3" y="3" width="18" height="18" rx="2" ry="2"/>
-                            <circle cx="9" cy="9" r="2"/>
-                            <path d="M21 15l-3.086-3.086a2 2 0 00-2.828 0L6 21"/>
-                            <path d="M12 8v8m-4-4h8"/>
-                            <circle cx="12" cy="12" r="1" fill="currentColor"/>
+                            <path d="M10 13a5 5 0 0 0 7.54.54l3-3a5 5 0 0 0-7.07-7.07l-1.72 1.71"/>
+                            <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"/>
                         </svg>
                     </div>
-                    <h3 class="feature-title">Image Generation Workshop</h3>
+                    <h3 class="feature-title">Emergency Notification</h3>
                     <p class="feature-description">
-                        Intelligently generate calculator interface backgrounds and themes, personalize your exclusive calculator appearance.
-                        Supports multiple style themes, making your calculator unique.
+                        Set up your emergency contacts. If you haven't checked in within your set timeframe (e.g., 3 days), an automated SOS will be sent via email.
+                    </p>
+                </div>
+
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2"/>
+                            <circle cx="9" cy="7" r="4"/>
+                            <path d="M23 21v-2a4 4 0 0 0-3-3.87"/>
+                            <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Guardian Circle</h3>
+                    <p class="feature-description">
+                        Invite friends or family to join your circle. Watch over each other's status and reach out immediately if someone stops updating.
+                    </p>
+                </div>
+
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"/>
+                            <path d="M13.73 21a2 2 0 0 1-3.46 0"/>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Friendly Nudge</h3>
+                    <p class="feature-description">
+                        Notice a friend in your circle forgot to check in? Send a friendly "Nudge" notification to show you care without adding pressure.
+                    </p>
+                </div>
+
+                <div class="feature-card">
+                    <div class="feature-icon">
+                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+                            <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
+                        </svg>
+                    </div>
+                    <h3 class="feature-title">Privacy Focused</h3>
+                    <p class="feature-description">
+                        We don't track your real-time location or read your contacts. All data is encrypted and only used for your safety, respecting your privacy.
                     </p>
                 </div>
 
@@ -91,89 +124,33 @@
                             <rect x="2" y="3" width="20" height="14" rx="2" ry="2"/>
                             <line x1="8" y1="21" x2="16" y2="21"/>
                             <line x1="12" y1="17" x2="12" y2="21"/>
-                            <path d="M7 8h10M7 12h10M7 16h6"/>
-                            <circle cx="18" cy="6" r="1" fill="currentColor"/>
-                            <circle cx="6" cy="6" r="1" fill="currentColor"/>
-                        </svg>
-                    </div>
-                    <h3 class="feature-title">Smart Computing Engine</h3>
-                    <p class="feature-description">
-                        Powerful scientific computing engine supporting advanced calculation functions including trigonometric functions, logarithms, exponentials, and statistics.
-                        Precise mathematical expression parsing ensures calculation accuracy.
-                    </p>
-                </div>
-
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <circle cx="12" cy="12" r="10"/>
-                            <path d="M12 6v12"/>
-                            <path d="M17 12H7"/>
-                            <path d="M12 2v4M12 18v4M4 12h4M16 12h4"/>
-                            <circle cx="12" cy="8" r="1" fill="currentColor"/>
-                            <circle cx="12" cy="16" r="1" fill="currentColor"/>
-                        </svg>
-                    </div>
-                    <h3 class="feature-title">Financial Calculation Tools</h3>
-                    <p class="feature-description">
-                        Professional financial calculation functions including compound interest calculations, loan calculations, and return on investment.
-                        Supports multiple currency conversions and exchange rate calculations to meet business and investment needs.
-                    </p>
-                </div>
-
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M3 9l9-7 9 7v11a2 2 0 01-2 2H5a2 2 0 01-2-2z"/>
-                            <polyline points="9,22 9,12 15,12 15,22"/>
-                            <path d="M12 2v6M12 16v6M6 8l6-6 6 6M6 16l6 6 6-6"/>
-                            <circle cx="12" cy="12" r="2" fill="currentColor"/>
                         </svg>
                     </div>
                     <h3 class="feature-title">Cross-Platform Sync</h3>
                     <p class="feature-description">
-                        Supports multiple platforms including iOS, Android, macOS, and Windows with cloud data synchronization.
-                        Access your personalized calculator configurations and calculation history anytime, anywhere.
-                    </p>
-                </div>
-
-                <div class="feature-card">
-                    <div class="feature-icon">
-                        <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <rect x="3" y="11" width="18" height="11" rx="2" ry="2"/>
-                            <circle cx="12" cy="16" r="1"/>
-                            <path d="M7 11V7a5 5 0 0110 0v4"/>
-                            <path d="M12 1v6M12 17v6M6 7l6-6 6 6M6 17l6 6 6-6"/>
-                            <circle cx="12" cy="12" r="2" fill="currentColor"/>
-                        </svg>
-                    </div>
-                    <h3 class="feature-title">Privacy & Security Protection</h3>
-                    <p class="feature-description">
-                        Local computing processing protects your data privacy. Supports offline use,
-                        ensuring sensitive calculation data won't be leaked, making calculations more secure and reliable.
+                        Available on iOS, Android, and macOS. Your check-in history and settings stay synced across all your devices for continuous protection.
                     </p>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- 下载区域 -->
+    <!-- Download Section -->
     <section id="download" class="download">
         <div class="container">
-            <h2 class="section-title">Get Started Now</h2>
-            <p class="section-subtitle">Available on multiple platforms</p>
+            <h2 class="section-title">Start Protecting Today</h2>
+            <p class="section-subtitle">Sync across all your platforms</p>
             
             <div class="download-grid">
                 <div class="download-card">
                     <div class="download-icon">
                         <svg width="48" height="48" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                            <path d="M18 8A6 6 0 0 0 6 8c0 7-3 9-3 9h18s-3-2-3-9"/>
-                            <path d="M13.73 21a2 2 0 0 1-3.46 0"/>
+                            <path d="M12 19V5M5 12l7-7 7 7"/>
                         </svg>
                     </div>
-                    <h3>iOS</h3>
-                    <p>Download from App Store</p>
-                    <a href="#" class="btn btn-primary">App Store</a>
+                    <h3>App Store</h3>
+                    <p>For iPhone and iPad</p>
+                    <a href="#" class="btn btn-primary">Download</a>
                 </div>
 
                 <div class="download-card">
@@ -183,21 +160,21 @@
                             <line x1="12" y1="18" x2="12.01" y2="18"/>
                         </svg>
                     </div>
-                    <h3>Android</h3>
-                    <p>Download from Google Play</p>
-                    <a href="#" class="btn btn-primary">Google Play</a>
+                    <h3>Google Play</h3>
+                    <p>For Android Smartphones</p>
+                    <a href="#" class="btn btn-primary">Download</a>
                 </div>
             </div>
         </div>
     </section>
 
-    <!-- 页脚 -->
+    <!-- Footer -->
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/icon/app_icon.png" alt="Queee Calculator" class="logo-img">
-                    <span class="logo-text">Queee Calculator</span>
+                    <img src="assets/icon/app_icon.png" alt="Died Yet?" class="logo-img">
+                    <span class="logo-text">Died Yet?</span>
                 </div>
                 <div class="footer-links">
                     <a href="privacy.html">Privacy Policy</a>
@@ -206,7 +183,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 Queee Calculator. All rights reserved.</p>
+                <p>&copy; 2026 Died Yet?. All rights reserved.</p>
             </div>
         </div>
     </footer>
