Update website content with 'Are you dead?' dark humor branding

--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Died Yet? - Safety Check-in for Solo Living</title>
-    <meta name="description" content="Died Yet? is a safety check-in tool for people living alone. Through simple daily check-ins and an emergency notification system, it provides invisible protection for your safety.">
-    <meta name="keywords" content="solo living safety, safety check-in, Died Yet, emergency notification, elderly safety, international students safety">
+    <title>Are you dead? - Safety Check-in for Solo Living</title>
+    <meta name="description" content="Are you dead? is a dark humor safety check-in tool. If you stop checking in, we'll make sure someone finds you before you become a permanent part of the furniture.">
+    <meta name="keywords" content="solo living safety, dark humor, Are you dead, check-in, retrieval squad, afk in real life">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -17,8 +17,8 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="assets/icon/app_icon.png" alt="Died Yet?" class="logo-img">
-                <span class="logo-text">Died Yet?</span>
+                <img src="assets/icon/app_icon.png" alt="Are you dead?" class="logo-img">
+                <span class="logo-text">Are you dead?</span>
             </div>
             <div class="nav-menu">
                 <a href="#features" class="nav-link">Features</a>
@@ -32,14 +32,15 @@
     <!-- Hero Section -->
     <section class="hero">
         <div class="hero-container">
-            <h1 class="hero-title">Died Yet?</h1>
-            <p class="hero-subtitle">"Still alive? Check in." - Guarding your every day</p>
+            <h1 class="hero-title">Are you dead?</h1>
+            <p class="hero-subtitle">"Still alive? Prove it." — Your ultimate body retrieval squad</p>
             <p class="hero-description">
-                An invisible safety net designed for those living alone. Check in once a day to confirm you're safe. If you miss a check-in, the system automatically notifies your emergency contacts.
-                Never let care be absent, keeping safety online at all times.
+                A self-deprecating safety net for the solo legends. Check in once a day to confirm you're still fresh. 
+                If you miss a check-in, we'll notify your "Chosen One" to come check if you've finally joined the afterlife.
+                Because nobody wants to be found by the smell.
             </p>
             <div class="hero-buttons">
-                <a href="#download" class="btn btn-primary">Get Started</a>
+                <a href="#download" class="btn btn-primary">Start Surviving</a>
                 <a href="#features" class="btn btn-secondary">Learn More</a>
             </div>
         </div>
@@ -48,8 +49,8 @@
     <!-- Core Features -->
     <section id="features" class="features">
         <div class="container">
-            <h2 class="section-title">Core Features</h2>
-            <p class="section-subtitle">Simple design, solid protection</p>
+            <h2 class="section-title">Survival Features</h2>
+            <p class="section-subtitle">Simple design, ironic protection</p>
             
             <div class="features-grid">
                 <div class="feature-card">
@@ -59,9 +60,9 @@
                             <polyline points="22 4 12 14.01 9 11.01"/>
                         </svg>
                     </div>
-                    <h3 class="feature-title">One-Tap Check-in</h3>
+                    <h3 class="feature-title">One-Tap Survival</h3>
                     <p class="feature-description">
-                        Just one tap a day to let the system and your loved ones know you're safe. Minimal interaction that won't disrupt your daily life.
+                        Just one tap a day to prove to the world (and your retrieval specialist) that you're still kicking. Minimal effort for maximum peace of mind.
                     </p>
                 </div>
 
@@ -72,9 +73,9 @@
                             <path d="M14 11a5 5 0 0 0-7.54-.54l-3 3a5 5 0 0 0 7.07 7.07l1.71-1.71"/>
                         </svg>
                     </div>
-                    <h3 class="feature-title">Emergency Notification</h3>
+                    <h3 class="feature-title">AFK Alert</h3>
                     <p class="feature-description">
-                        Set up your emergency contacts. If you haven't checked in within your set timeframe (e.g., 3 days), an automated SOS will be sent via email.
+                        Designate your "Chosen One". If you go AFK in real life for too long (e.g., 3 days), an automated SOS will be sent to their inbox.
                     </p>
                 </div>
 
@@ -87,9 +88,9 @@
                             <path d="M16 3.13a4 4 0 0 1 0 7.75"/>
                         </svg>
                     </div>
-                    <h3 class="feature-title">Guardian Circle</h3>
+                    <h3 class="feature-title">Retrieval Squad</h3>
                     <p class="feature-description">
-                        Invite friends or family to join your circle. Watch over each other's status and reach out immediately if someone stops updating.
+                        Invite friends to your squad. Watch over each other's "freshness" and reach out if someone starts looking a bit suspiciously quiet.
                     </p>
                 </div>
 
@@ -100,9 +101,9 @@
                             <path d="M13.73 21a2 2 0 0 1-3.46 0"/>
                         </svg>
                     </div>
-                    <h3 class="feature-title">Friendly Nudge</h3>
+                    <h3 class="feature-title">The Poke</h3>
                     <p class="feature-description">
-                        Notice a friend in your circle forgot to check in? Send a friendly "Nudge" notification to show you care without adding pressure.
+                        Notice a squad member forgot to check in? Send them a "Poke" to confirm they're busy and haven't just become a ghost.
                     </p>
                 </div>
 
@@ -112,9 +113,9 @@
                             <path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"/>
                         </svg>
                     </div>
-                    <h3 class="feature-title">Privacy Focused</h3>
+                    <h3 class="feature-title">Privacy (Duh)</h3>
                     <p class="feature-description">
-                        We don't track your real-time location or read your contacts. All data is encrypted and only used for your safety, respecting your privacy.
+                        We don't care about your location or your contacts. We only care if you're still alive. Your data is encrypted and used solely for your survival.
                     </p>
                 </div>
 
@@ -126,9 +127,9 @@
                             <line x1="12" y1="17" x2="12" y2="21"/>
                         </svg>
                     </div>
-                    <h3 class="feature-title">Cross-Platform Sync</h3>
+                    <h3 class="feature-title">Ghost on All Devices</h3>
                     <p class="feature-description">
-                        Available on iOS, Android, and macOS. Your check-in history and settings stay synced across all your devices for continuous protection.
+                        Available on iOS, Android, and macOS. Your survival streak stays synced across all devices. Don't let a dead battery be the end of you.
                     </p>
                 </div>
             </div>
@@ -138,8 +139,8 @@
     <!-- Download Section -->
     <section id="download" class="download">
         <div class="container">
-            <h2 class="section-title">Start Protecting Today</h2>
-            <p class="section-subtitle">Sync across all your platforms</p>
+            <h2 class="section-title">Join the Squad Today</h2>
+            <p class="section-subtitle">Sync your survival across all platforms</p>
             
             <div class="download-grid">
                 <div class="download-card">
@@ -173,8 +174,8 @@
         <div class="container">
             <div class="footer-content">
                 <div class="footer-logo">
-                    <img src="assets/icon/app_icon.png" alt="Died Yet?" class="logo-img">
-                    <span class="logo-text">Died Yet?</span>
+                    <img src="assets/icon/app_icon.png" alt="Are you dead?" class="logo-img">
+                    <span class="logo-text">Are you dead?</span>
                 </div>
                 <div class="footer-links">
                     <a href="privacy.html">Privacy Policy</a>
@@ -183,7 +184,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2026 Died Yet?. All rights reserved.</p>
+                <p>&copy; 2026 Are you dead?. All rights reserved. Keep on breathing.</p>
             </div>
         </div>
     </footer>
