--- a/terms.html
+++ b/terms.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms of Service - Died Yet?</title>
-    <meta name="description" content="Died Yet? Terms of Service - Learn about the terms and conditions for using our services">
+    <title>Terms of Existence - Are you dead?</title>
+    <meta name="description" content="Are you dead? Terms of Existence - The fine print for staying alive (or not)">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -133,8 +133,8 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <img src="assets/icon/app_icon.png" alt="Died Yet?" class="logo-img">
-                <span class="logo-text">Died Yet?</span>
+                <img src="assets/icon/app_icon.png" alt="Are you dead?" class="logo-img">
+                <span class="logo-text">Are you dead?</span>
             </div>
             <div class="nav-menu">
                 <a href="index.html" class="nav-link">Home</a>
@@ -147,86 +147,80 @@
 
     <div class="terms-container">
         <div class="terms-header">
-            <h1 class="terms-title">Terms of Service</h1>
-            <p class="terms-subtitle">Last Updated: January 2026</p>
+            <h1 class="terms-title">Terms of Existence</h1>
+            <p class="terms-subtitle">Last Updated: January 2026 — Stay Fresh</p>
         </div>
 
         <div class="terms-content">
             <div class="terms-section">
-                <h2>1. Agreement Acceptance</h2>
+                <h2>1. Acceptance of Fate</h2>
                 <p>
-                    Welcome to Died Yet?! These Terms of Service ("Agreement") constitute a legal agreement between you and us regarding the use of the Died Yet? application and its related services.
-                </p>
-                <p>
-                    By downloading, installing, accessing, or using our services, you indicate that you agree to be bound by this Agreement. If you do not agree to the terms of this Agreement, please do not use our services.
+                    Welcome to Are you dead?! By using this app, you acknowledge that you are indeed alive (for now) and agree to be bound by these terms. If you don't agree, please delete the app and maybe hire a full-time butler to poke you every morning.
                 </p>
             </div>
 
             <div class="terms-section">
-                <h2>2. Service Description</h2>
-                <p>Died Yet? is a safety check-in tool for solo living, providing the following services:</p>
+                <h2>2. What We Actually Do</h2>
+                <p>Are you dead? provides a suite of survival-themed tools for the modern hermit:</p>
                 <ul>
-                    <li>Daily one-tap check-ins to confirm safety.</li>
-                    <li>Emergency contact setup and automated alert notifications (when missed check-ins occur).</li>
-                    <li>Guardian Circle (sharing check-in status with friends).</li>
-                    <li>Friendly Nudge functionality.</li>
-                    <li>Cross-platform data synchronization.</li>
+                    <li>Daily "I'm still warm" check-ins.</li>
+                    <li>Designation of a "Chosen One" to be notified when you go suspiciously quiet.</li>
+                    <li>Retrieval Squad formation (judging your friends' survival streaks).</li>
+                    <li>Friendly "Pokes" to make sure your squad isn't turning into ghosts.</li>
                 </ul>
             </div>
 
             <div class="terms-section">
-                <h2>3. User Responsibility</h2>
-                <p>To ensure the effectiveness of our services, you agree to:</p>
+                <h2>3. Your Survival Responsibilities</h2>
+                <p>To avoid false alarms or becoming a permanent fixture, you agree to:</p>
                 <ul>
-                    <li>Provide accurate and up-to-date emergency contact information.</li>
-                    <li>Maintain the security of your account.</li>
-                    <li>Acknowledge that this app is a supplementary tool and not a replacement for professional emergency services.</li>
-                    <li>Ensure you can provide timely check-in feedback when receiving reminders.</li>
+                    <li>Provide a real email for someone who actually cares if you're MIA.</li>
+                    <li>Don't lose your phone in the sofa cushions for more than 3 days.</li>
+                    <li>Acknowledge that we are a dark humor app, not a 24/7 tactical rescue team.</li>
                 </ul>
             </div>
 
             <div class="terms-section">
-                <h2>4. Usage Rules</h2>
+                <h2>4. Don't Be a Ghost (Literally and Figuratively)</h2>
                 <div class="warning-box">
                     <p><strong>The following activities are strictly prohibited:</strong></p>
                     <ul>
-                        <li>Reverse engineering, decompiling, or disassembling the application.</li>
-                        <li>Using automated scripts for malicious registration or check-ins.</li>
-                        <li>Abusing notification features to harass others.</li>
-                        <li>Posting any illegal or harmful content.</li>
+                        <li>Trying to hack our code to live forever.</li>
+                        <li>Using bots to pretend you're alive when you're actually a vampire.</li>
+                        <li>Spamming your squad with pokes until they wish they were ghosts.</li>
                     </ul>
                 </div>
             </div>
 
             <div class="terms-section">
-                <h2>5. Disclaimer</h2>
+                <h2>5. The Reality Check</h2>
                 <div class="info-box">
                     <p><strong>Special Notice:</strong></p>
-                    <p>Died Yet? is designed as a supplementary safety tool. Due to network latency, system failures, email filtering, and other uncontrollable factors, we cannot guarantee 100% notification delivery. In case of emergency, please prioritize professional emergency rescue. We are not liable for any direct or indirect losses resulting from delayed or undelivered notifications.</p>
+                    <p>Are you dead? is a dark humor tool. We cannot guarantee 100% notification delivery because the internet, like life, is unpredictable. In case of actual trouble, call the real authorities. We are not liable for you becoming a skeleton because your Chosen One has a really aggressive spam filter.</p>
                 </div>
             </div>
 
             <div class="terms-section">
-                <h2>6. Intellectual Property</h2>
-                <p>Died Yet? and all related content (including but not limited to software code, design, text, images, etc.) are protected by intellectual property laws and are owned by us.</p>
+                <h2>6. Ownership of Your Soul (and Code)</h2>
+                <p>All design, code, and irony within this app are owned by us. You just get to use it until your survival streak ends.</p>
             </div>
 
             <div class="terms-section">
-                <h2>7. Agreement Modifications</h2>
-                <p>We reserve the right to modify this Agreement at any time. Significant changes will be announced via in-app notifications. Continued use of our services indicates acceptance of the modified agreement.</p>
+                <h2>7. Changing the Deal</h2>
+                <p>We might change these terms. If we do, we'll try to tell you before you're gone. Continued use means you still agree to the irony.</p>
             </div>
 
             <div class="terms-section">
-                <h2>8. Contact Us</h2>
+                <h2>8. Talk to Us</h2>
                 <div class="contact-info">
-                    <p>If you have any questions regarding this Agreement, please contact us at:</p>
+                    <p>If you're still confused or want to say hi before the end, contact us at:</p>
                     <ul>
                         <li>Email: xiongsl2013@gmail.com</li>
                     </ul>
                 </div>
             </div>
 
-            <a href="index.html" class="back-link">← Back to Home</a>
+            <a href="index.html" class="back-link">← Back to the World of the Living</a>
         </div>
     </div>
 
