Update privacy policy and terms: change to 'do not actively collect any data'

--- a/terms.html
+++ b/terms.html
@@ -169,7 +169,7 @@
                     <li>Friendly "Pokes" to make sure your squad isn't turning into ghosts.</li>
                 </ul>
                 <div class="info-box">
-                    <p><strong>Our Privacy Commitment:</strong> We do NOT collect, store, or track your personal data. Everything stays on your device. We built this app with privacy as the foundation, not an afterthought.</p>
+                    <p><strong>Our Privacy Commitment:</strong> We do NOT actively collect, store, or track your personal data. Everything stays on your device. We built this app with privacy as the foundation, not an afterthought.</p>
                 </div>
             </div>
 
@@ -180,7 +180,7 @@
                     <li>Provide a real email for someone who actually cares if you're MIA (optional—stored locally on your device only).</li>
                     <li>Don't lose your phone in the sofa cushions for more than 3 days.</li>
                     <li>Acknowledge that we are a dark humor app, not a 24/7 tactical rescue team.</li>
-                    <li>Understand that we don't collect your data, so you're responsible for backing up your own information if needed.</li>
+                    <li>Understand that we don't actively collect your data, so you're responsible for backing up your own information if needed.</li>
                 </ul>
             </div>
 
@@ -208,7 +208,7 @@
                 <h2>6. Ownership of Your Soul (and Code)</h2>
                 <p>All design, code, and irony within this app are owned by us. You just get to use it until your survival streak ends.</p>
                 <div class="info-box">
-                    <p><strong>Your Data, Your Ownership:</strong> Since we don't collect your data, you own 100% of it. It's yours. We can't claim ownership of something we don't have.</p>
+                    <p><strong>Your Data, Your Ownership:</strong> Since we don't actively collect your data, you own 100% of it. It's yours. We can't claim ownership of something we don't have.</p>
                 </div>
             </div>
 
