Update feature descriptions: remove device support info and update privacy description

--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                     </div>
                     <h3 class="feature-title">Privacy (Duh)</h3>
                     <p class="feature-description">
-                        We don't care about your location or your contacts. We only care if you're still alive. Your data is encrypted and used solely for your survival.
+                        We do NOT actively collect any data. Your privacy is sacred to us. All your data stays on your device, and we don't track, monitor, or store your personal information.
                     </p>
                 </div>
 
@@ -129,7 +129,7 @@
                     </div>
                     <h3 class="feature-title">Ghost on All Devices</h3>
                     <p class="feature-description">
-                        Available on iOS, Android, and macOS. Your survival streak stays synced across all devices. Don't let a dead battery be the end of you.
+                        Don't let a dead battery be the end of you. Keep your survival streak going, one check-in at a time.
                     </p>
                 </div>
             </div>
